--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,3 +15,9 @@
   margin: 0 auto;
   display: block;
 }
+.center-image_b{
+  height: 100%;
+  width: 100%;
+  margin: 0 auto;
+  display: block;
+}
