--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,3 +21,9 @@
   margin: 0 auto;
   display: block;
 }
+body {
+  font-family: 'Monaco';
+  font-weight: 400;
+  font-style: normal;
+  line-height: 1.5;
+}
