--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,16 +22,24 @@
   display: block;
 }
 body {
+  font-family: Verdana;
   font-weight: 400;
   font-style: normal;
   line-height: 1.5;
   font-size: 130%;
 }
+h1
+{
+  font-family: Verdana;
+  font-size: 150%;
+}
 h2
 {
+  font-family: Verdana;
   font-size: 150%;
 }
 h3
 {
+  font-family: Verdana;
   font-size: 150%;
 }
