--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,7 +22,7 @@
   display: block;
 }
 body {
-  font-family: Verdana;
+  font-family: Monaco;
   font-weight: 400;
   font-style: normal;
   line-height: 1.5;
@@ -30,16 +30,16 @@ body {
 }
 h1
 {
-  font-family: Verdana;
+  font-family: Monaco;
   font-size: 150%;
 }
 h2
 {
-  font-family: Verdana;
+  font-family: Monaco;
   font-size: 150%;
 }
 h3
 {
-  font-family: Verdana;
+  font-family: Monaco;
   font-size: 150%;
 }
